force-app/main/default/objects/Asset_Token__c/Asset_Token__c.object-meta.xml
<CustomObject>
    <label>Asset-Token</label>
    <nameField>
        <label>Asset Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset-Tokens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>