force-app/main/default/objects/Asset_Token__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Token Code</description>
    <inlineHelpText>Token Code</inlineHelpText>
    <label>Asset</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>