force-app/main/default/objects/Asset_Token__c/fields/CoinGeckoAPIName__c.field-meta.xml
<CustomField>
    <fullName>CoinGeckoAPIName__c</fullName>
    <description>Coin Gecko API Name</description>
    <label>Coin Gecko API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>