force-app/main/default/objects/Asset_Token__c/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>