force-app/main/default/objects/Asset_Token__c/fields/ConversionRateLastSet__c.field-meta.xml
<CustomField>
    <fullName>ConversionRateLastSet__c</fullName>
    <label>Conversion Rate Last Set</label>
    <type>DateTime</type>
</CustomField>