force-app/main/default/objects/Asset_Token__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>Native coin for the blockchain (XRP, ETH, BTC, DOGE, etc) as opposed to a token. Tokens are defined by their issuer or smart contract, while native coins run the block chain. They are validated differently.</description>
    <label>Network Native Coin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockchains</valueSetName>
    </valueSet>
</CustomField>