force-app/main/default/objects/Asset_Token__c/fields/TokenInformation__c.field-meta.xml
<CustomField>
    <fullName>TokenInformation__c</fullName>
    <description>URL to the issuer or information about the token.</description>
    <label>Token Information</label>
    <type>Url</type>
</CustomField>