force-app/main/default/objects/Asset_Token__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Asset__c</columns>
    <columns>ConversionRate__c</columns>
    <columns>ConversionRateLastSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>