force-app/main/default/objects/Asset_Token__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>ConversionRate__c</columns>
<!--
    <columns>CURRENCY_ISO_CODE</columns>
-->
    <columns>ConversionRateLastSet__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>